     [1011650] 0.9-rc1: comments get parsed; (Added Joel Fouse's patch plus
     modifications to ensure that driver can cope with comments before the first
     SQL statement).
     [1002971] TimestampTest failures under JDK 1.3 (Possible class cast
     exception in TdsData).
     [1008126] Metadata getTimeDateFunctions() wrong

08/17/2004 - Brian Heineman
 o Additional corrections for bug [966274] Trusted Connections no longer work;
   (thanks to David Kilzer and Joel Fouse).
 o Corrected bug [1009234] sp_prepare and sp_prepexec should be limited to TDS
   8.0
 o Added initial support for sp_cursorprepare, sp_cursorprepexec and
   sp_cursorexecute; statement handles are not currently cached for reuse.

08/16/2004 - David Kilzer
 o New JtdsObjectFactoryUnitTest class used to test JtdsObjectFactory class.
 o Pulled ucFirst() method out of JtdsDataSourceUnitTest class into
   DefaultPropertiesTestLibrary class.

08/16/2004 - Brian Heineman
 o Corrected bug [966274] Trusted Connections no longer work; (thanks to Mike
   Hutchinson for the patch and all the users who helped to find the problem).

08/14/2004 - Brian Heineman
 o Corrected bug [1006449] 0.9rc1: Driver version broken; (thanks to Mike
   Hutchinson for the patch).

08/13/2004 - Brian Heineman
 o Added test for bug [1008208] 0.9-rc1 updateNull doesn't work
 o Added initial support for prepareSql=4; sp_prepexec used in conjunction with
   sp_execute.  Currently the statement handle is not retrieved and cached so
   sp_prepexec is being called each time. Update the FAQ to indicate that
   sp_prepexec functionality is experimental.
 o Corrected bug [1008208] 0.9-rc1 updateNull doesn't work; updated test to
   ensure functionality continues to work in the future.

08/13/2004 - David Kilzer
 o Applied patch to check if connection is null before calling
   connection.isClosed() in JtdsStatement.  Patch posted to
   [1007962] 0.9-rc1 NullPointerException; was created while debugging an
   issue with named pipes.
